--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,8 @@
 	"require" : {
 		"php": ">=5.3.2",
 		"silverstripe/framework": "~3.1"
-	}
+	},
+	"extra" : {
+		"installer-name": "regionaldata"
+    }
 }
